Java Vanilla API