@@ -5,31 +5,17 @@ tasks.withType(PublishToMavenRepository).configureEach { it.enabled = false }
 compileJava {
     // To enable argument names in reporting and debugging
     options.compilerArgs += '-parameters'
-    options.compilerArgs += '--enable-preview'
 }
 
 compileTestJava {
     // To enable argument names in reporting and debugging
     options.compilerArgs += '-parameters'
-    options.compilerArgs += '--enable-preview'
-}
-
-tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
-}
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "--enable-preview"
 }
 
 tasks.withType(Javadoc) {
-    options.addStringOption("source", "17")
-    options.addBooleanOption("-enable-preview", true)
+    options.addStringOption("source", "21")
 }
 
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
-}
 
 dependencies {
 
@@ -39,9 +25,10 @@ dependencies {
     implementation project(':thoth-jooq-reactor')
     implementation project(':thoth-kafka-consumer-akka')
     implementation("io.vavr:vavr:$vavrVersion")
+    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
     implementation("fr.maif:functional-json:$functionalJsonVersion")
     implementation("com.fasterxml.uuid:java-uuid-generator:4.0.1")
-    implementation("org.postgresql:postgresql:42.2.5")
+    implementation('org.postgresql:postgresql:42.7.7')
     implementation "io.projectreactor.kafka:reactor-kafka:$reactorKafkaVersion"
     implementation("fr.maif:jooq-async-api:$jooqAsyncVersion")
     implementation("fr.maif:jooq-async-reactive:$jooqAsyncVersion")
