@@ -5,30 +5,11 @@ tasks.withType(PublishToMavenRepository).configureEach { it.enabled = false }
 compileJava {
     // To enable argument names in reporting and debugging
     options.compilerArgs += '-parameters'
-    options.compilerArgs += '--enable-preview'
 }
 
 compileTestJava {
     // To enable argument names in reporting and debugging
     options.compilerArgs += '-parameters'
-    options.compilerArgs += '--enable-preview'
-}
-
-tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
-}
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "--enable-preview"
-}
-
-tasks.withType(Javadoc) {
-    options.addStringOption("source", "17")
-    options.addBooleanOption("-enable-preview", true)
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
 }
 
 dependencies {
@@ -38,6 +19,8 @@ dependencies {
     implementation project(':thoth-core-reactor')
     implementation project(':thoth-jooq')
     implementation project(':thoth-kafka-consumer-reactor')
+    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
+    implementation("io.projectreactor:reactor-core:$reactorVersion")
     implementation "io.projectreactor.kafka:reactor-kafka:$reactorKafkaVersion"
     implementation("io.vavr:vavr:$vavrVersion")
     implementation("fr.maif:functional-json:$functionalJsonVersion")
